--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,9 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   background_location: ^0.5.0
+  firebase_core: "^1.1.0"
+  firebase_database: ^7.0.0-dev.2
+  cloud_firestore: ^1.0.7
 
 dev_dependencies:
   flutter_test:
