--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   background_location: ^0.5.0
   firebase_core: "^1.1.0"
   firebase_database: ^7.0.0-dev.2
-  cloud_firestore: ^1.0.7
+  flutter_tts: ^3.0.0
 
 dev_dependencies:
   flutter_test:
